fixed layout issue in menu while in xs viewport

--- a/static/styles/dracula.css
+++ b/static/styles/dracula.css
@@ -24,6 +24,10 @@ body {
   color: #fff;
 }
 
+.ghost {
+  color: #fff;
+  margin-bottom: 21px;
+}
 
 .cinderella {
   margin-left: 0;
